--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "bootstrap": "^5.0.0-beta3",
+        "element-ui": "^2.15.1",
+        "moment": "^2.29.1",
+        "vue": "^2.6.12"
     }
 }
